--- a/M3-D7.html
+++ b/M3-D7.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="th=device-th, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-  <!--
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <!--
       PAIR PROGRAMMING EXERCISE.
       1 DRIVER, 1 NAVIGATOR.
       1 Exercise each. Use GitHub to share the code.
@@ -17,7 +23,7 @@
       Ex1) Get and display, using async / await, the users from: https://jsonplaceholder.typicode.com/users 
       Ex2) Create a dropdown (<select>) that allows the user to select between name, username and email. 
            Create then a filter. When the user types in something, you should filter the user based on the input and on the value of the select.
-           Es.: select on NAME. Filter input = Glenna, only user id number 9 should remain
+           Es.: select on NAME. Filter input = Glenna, only user number 9 should remain
       Ex3) Create a function that, from the list of users, extracts only the names
       Ex4) Create a function that, from the list of users, creates an array of addresses as string and not as an object. Like:
               {
@@ -36,16 +42,58 @@
       EXTRA)
       Visualize on a Google Map plugin all the users (using lat & lng)
     -->
-</head>
+  </head>
 
-<body>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
-  <script></script>
-</body>
-
+  <body>
+    <div class="container">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Name</th>
+            <th scope="col">Username</th>
+            <th scope="col">Email</th>
+            <th scope="col">Website</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Address</th>
+            <th scope="col">Company</th>
+          </tr>
+        </thead>
+        <tbody id="users"></tbody>
+      </table>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.onload = async () => {
+        const response = await fetch(
+          "https://jsonplaceholder.typicode.com/users"
+        );
+        const result = await response.json();
+        makeUserCards(result);
+        console.log(result);
+      };
+      const makeUserCards = (userData) => {
+        const users = document.querySelector("#users");
+        userData.map((user) => {
+          users.innerHTML += `<tr>
+      <th scope="row">${user.id}</th>
+      <td>${user.name}</td>
+      <td>${user.username}</td>
+      <td>${user.email}</td>
+      <td>${user.website}</td>
+      <td>${user.phone}</td>
+    </tr>`;
+        });
+      };
+    </script>
+  </body>
 </html>
