--- a/M3-D7.html
+++ b/M3-D7.html
@@ -68,6 +68,7 @@
             <th scope="col">Phone</th>
             <th scope="col">Address</th>
             <th scope="col">Company</th>
+            <th scope="col">Details</th>
           </tr>
         </thead>
         <tbody id="users"></tbody>
@@ -130,6 +131,7 @@
                   <td>${user.phone}</td>
                   <td>${Object.values(user.address).filter(value => typeof value !== "object").join(', ')}</td>
                   <td>${user.company.name}</td>
+                  <td><a href="user.html?id=${user.id}">Show Details</a></td>
                 </tr>`;
         });
       }
